--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --color-black: #070D10;
   --color-success:#00D884;
   --color-error:#B00020;
+  --color-transparent:rgba(255,255,255,.0);
 
   --gradient: linear-gradient( 45deg, var(--color-primary), var(--color-secondary));
 
@@ -74,6 +75,11 @@ li{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.btn-logout{
+  background: var(--color-transparent);
+  cursor:pointer;
 }
 
 input, button{
@@ -323,6 +329,16 @@ ul.listado_tarea button.task_icon img{
   border-radius: var(--border-radius);
 }
 
+.alerta{
+  padding:.5rem 1rem;
+  border-radius: var(--border-radius);
+  margin-bottom: 2rem;
+  background-color: var(--color-error);
+}
+
+.alerta-error{
+  color: var(--color-white);
+}
 
 
 
